--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,7 +7,6 @@
 
 <div id="vue-app">
     <!-- Vue components will render here -->
-    <sample-component></sample-component>
 </div>
 
 @section Scripts {
@@ -19,6 +18,6 @@
     else
     {
         <!-- Load from static dist folder in production -->
-        <script src="~/dist/bundle.js"></script>
+        <script src="~/dist/bundle.js" asp-append-version="true"></script>
     }
 }
